loading barr css fix

--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -53,3 +53,12 @@ tbody tr:nth-child(odd) {
 .red {
     color: red;
 }
+
+#loading-bar-spinner .spinner-icon {
+	width: 20px;
+	height: 20px;
+}
+
+#loading-bar .bar{
+	height: 3px;
+}
