--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -1,11 +1,11 @@
 body{
     text-align: center;
     background-color: #ddd;
-	font-size:  x-large;
-	font-family: arial,sans-serif;
+    font-size:  x-large;
+    font-family: arial,sans-serif;
 }
 table{
-	width: 100%;
+    width: 100%;
 }
 table, td, th{
     border-collapse: collapse;
@@ -26,14 +26,14 @@ tr td:last-child{
     white-space:nowrap;
 }
 input,select{
-	font-size: x-large;
+    font-size: x-large;
 }
 h3{
-	margin: 10px;
-	display: inline;
+    margin: 10px;
+    display: inline;
 }
 .titlemargin{
-	margin: 30px;
+    margin: 30px;
 }
 tbody tr:nth-child(odd) {
     background-color: #afafaf;
@@ -53,12 +53,16 @@ tbody tr:nth-child(odd) {
 .red {
     color: red;
 }
-
-#loading-bar-spinner .spinner-icon {
-	width: 20px;
-	height: 20px;
+.tras {
+    background-color: transparent;
 }
-
+.tras:hover {
+    background-color: #688f9a;
+}
+#loading-bar-spinner .spinner-icon {
+    width: 20px;
+    height: 20px;
+}
 #loading-bar .bar{
-	height: 3px;
+    height: 3px;
 }
